<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accept">Accept</string>
    <string name="activity_share_toolbar_header">Choose Contacts</string>
    <string name="add_contact_title">Add a Contact</string>
    <string name="allow">Allow</string>
    <string name="app_name">RedApp</string>
    <string name="app_package">org.redappproject.redapp.android</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="authenticating_with_device">Authenticating with device…</string>
    <string name="blogs_blog_post_created">Blog Post Created</string>
    <string name="blogs_blog_post_received">New Blog Post Received</string>
    <string name="blogs_blog_post_scroll_to">Scroll To</string>
    <string name="blogs_blog_removed">Blog removed</string>
    <string name="blogs_button">Blogs</string>
    <string name="blogs_feed_empty_state">No posts to show</string>
    <string name="blogs_feed_empty_state_action">"Posts from your contacts and blogs you subscribe to will appear here

Tap the pen icon to write a post"</string>
    <string name="blogs_other_blog_empty_state">No posts to show</string>
    <string name="blogs_publish_blog_post">Publish</string>
    <string name="blogs_reblog_button">Reblog</string>
    <string name="blogs_reblog_comment_hint">Add a comment (optional)</string>
    <string name="blogs_remove_blog">Remove Blog</string>
    <string name="blogs_remove_blog_dialog_message">"Are you sure that you want to remove this blog?

Posts will be removed from your device but not from other people's devices.

Any contacts you've shared this blog with might stop receiving updates."</string>
    <string name="blogs_remove_blog_ok">Remove</string>
    <string name="blogs_rss_feeds_import">Import RSS Feed</string>
    <string name="blogs_rss_feeds_import_button">Import</string>
    <string name="blogs_rss_feeds_import_error">We are sorry! There was an error importing your feed.</string>
    <string name="blogs_rss_feeds_import_hint">Enter the URL of the RSS feed</string>
    <string name="blogs_rss_feeds_manage">Manage RSS Feeds</string>
    <string name="blogs_rss_feeds_manage_author">Author:</string>
    <string name="blogs_rss_feeds_manage_delete_error">The feed could not be deleted!</string>
    <string name="blogs_rss_feeds_manage_empty_state">"No RSS feeds to show

Tap the + icon to import a feed"</string>
    <string name="blogs_rss_feeds_manage_error">There was a problem loading your feeds. Please try again later.</string>
    <string name="blogs_rss_feeds_manage_imported">Imported:</string>
    <string name="blogs_rss_feeds_manage_updated">Last Updated:</string>
    <string name="blogs_rss_remove_feed">Remove Feed</string>
    <string name="blogs_rss_remove_feed_dialog_message">"Are you sure that you want to remove this feed?

Posts will be removed from your device but not from other people's devices.

Any contacts you've shared this feed with might stop receiving updates."</string>
    <string name="blogs_rss_remove_feed_ok">Remove</string>
    <string name="blogs_sharing_button">Share Blog</string>
    <string name="blogs_sharing_declined_toast">Invitation declined</string>
    <string name="blogs_sharing_error">There was an error sharing this blog.</string>
    <string name="blogs_sharing_invitation_received">%1$s has shared the blog \"%2$s\" with you.</string>
    <string name="blogs_sharing_invitation_sent">You have shared the blog \"%1$s\" with %2$s.</string>
    <string name="blogs_sharing_invitations_title">Blog Invitations</string>
    <string name="blogs_sharing_joined_toast">Subscribed to blog</string>
    <string name="blogs_sharing_share">Share Blog</string>
    <string name="blogs_write_blog_post">Write Blog Post</string>
    <string name="bluetooth_setting">Connect via Bluetooth</string>
    <string name="briar_crashed">Sorry, RedApp has crashed.</string>
    <string name="cancel">Cancel</string>
    <string name="change_password">Change password</string>
    <string name="close">Close</string>
    <string name="contact_list_button">Contacts</string>
    <string name="create_new_account">You will need to create a new account, but you can use the same nickname.</string>
    <string name="display_settings_title">Display</string>
    <string name="download_briar">To continue using RedApp, please download version 1.0.</string>
    <string name="download_briar_button">Download RedApp 1.0</string>
    <string name="expiry_date_reached">"This software has expired.
Thank you for testing!"</string>
    <string name="feedback_settings_title">Feedback</string>
    <string name="forums_button">Forums</string>
    <string name="groups_button">Private Groups</string>
    <string name="groups_dissolve">Dissolve Group</string>
    <string name="groups_invite_members">Invite Members</string>
    <string name="groups_leave">Leave Group</string>
    <string name="groups_member_list">Member List</string>
    <string name="groups_reveal_contacts">Reveal Contacts</string>
    <string name="include_debug_report_crash">Include anonymous data about the crash</string>
    <string name="link_warning_intro">You are about to open the following link with an external app.</string>
    <string name="link_warning_open_link">Open Link</string>
    <string name="link_warning_text">This can be used to identify you. Think about whether you trust the person that sent you this link and consider opening it with Orfox.</string>
    <string name="link_warning_title">Link Warning</string>
    <string name="lock_button">Lock App</string>
    <string name="network_settings_title">Networks</string>
    <string name="not_your_fault">This is not your fault.</string>
    <string name="notification_settings_title">Notifications</string>
    <string name="notify_blog_posts_setting_summary">Show alerts for blog posts</string>
    <string name="notify_blog_posts_setting_title">Blog posts</string>
    <string name="notify_forum_posts_setting_summary">Show alerts for forum posts</string>
    <string name="notify_forum_posts_setting_title">Forum posts</string>
    <string name="notify_group_messages_setting_summary">Show alerts for group messages</string>
    <string name="notify_group_messages_setting_title">Group messages</string>
    <string name="notify_private_messages_setting_summary">Show alerts for private messages</string>
    <string name="notify_private_messages_setting_title">Private messages</string>
    <string name="notify_sign_in_summary">Show a reminder when the phone starts or the app has been updated</string>
    <string name="notify_sign_in_title">Remind me to sign in</string>
    <string name="notify_sound_setting">Sound</string>
    <string name="notify_vibration_setting">Vibrate</string>
    <string name="optional_contact_email">Your email address (optional)</string>
    <string name="panic_app_setting_summary">No app has been set</string>
    <string name="panic_app_setting_title">Panic Button App</string>
    <string name="panic_setting">Panic button setup</string>
    <string name="panic_setting_destructive_action">Destructive Actions</string>
    <string name="panic_setting_hint">Configure how RedApp will react when you use a panic button app</string>
    <string name="panic_setting_signout_summary">Sign out of RedApp if a panic button is pressed</string>
    <string name="panic_setting_signout_title">Sign Out</string>
    <string name="panic_setting_title">Panic button</string>
    <string name="please_send_report">Please help us build a better RedApp by sending us a crash report.</string>
    <string name="pref_language_title">Language &amp; region</string>
    <string name="pref_lock_summary">"Use the device's screen lock to protect RedApp while signed in"</string>
    <string name="pref_lock_timeout_summary">When not using RedApp, automatically lock it after %s</string>
    <string name="pref_lock_timeout_title">App lock inactivity timeout</string>
    <string name="pref_lock_timeout_value_default">5</string>
    <string name="pref_lock_title">App lock</string>
    <string name="pref_theme_light_value">light</string>
    <string name="pref_theme_title">Theme</string>
    <string name="purge_setting_summary">Delete your RedApp account if a panic button is pressed. Caution: This will permanently delete your identities, contacts and messages</string>
    <string name="purge_setting_title">Delete Account</string>
    <string name="report_is_encrypted">We promise that the report is encrypted and sent securely.</string>
    <string name="security_settings_title">Security</string>
    <string name="send_feedback">Send feedback</string>
    <string name="send_report">Send report</string>
    <string name="set_alias_button">Change</string>
    <string name="set_contact_alias">Change contact name</string>
    <string name="set_contact_alias_hint">Contact name</string>
    <string name="settings_button">Settings</string>
    <string name="sharing_status">Sharing Status</string>
    <string name="show">Show</string>
    <string name="sign_out_button">Sign Out</string>
    <string name="tor_mobile_data_title">Use mobile data</string>
    <string name="tor_network_setting">Connect via Internet (Tor)</string>
</resources>