<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <SwitchPreference android:title="@string/panic_setting_signout_title" android:key="pref_key_lock" android:summary="@string/panic_setting_signout_summary" android:defaultValue="true" app:iconSpaceReserved="false" />
    <PreferenceCategory android:layout="@layout/preferences_category" android:title="@string/panic_setting_destructive_action">
        <ListPreference android:icon="@android:drawable/ic_menu_close_clear_cancel" android:title="@string/panic_app_setting_title" android:key="pref_key_panic_app" android:summary="@string/panic_app_setting_summary" />
        <SwitchPreference android:enabled="false" android:title="@string/purge_setting_title" android:key="pref_key_purge" android:summary="@string/purge_setting_summary" android:defaultValue="false" app:iconSpaceReserved="false" />
    </PreferenceCategory>
</PreferenceScreen>