<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/social_share_white" android:id="@id/action_group_invite" android:title="@string/groups_invite_members" app:showAsAction="ifRoom" />
    <item android:icon="@drawable/ic_group_white" android:id="@id/action_group_member_list" android:title="@string/groups_member_list" app:showAsAction="ifRoom" />
    <item android:icon="@drawable/ic_visibility_white" android:id="@id/action_group_reveal" android:title="@string/groups_reveal_contacts" app:showAsAction="never" />
    <item android:icon="@drawable/action_delete_white" android:id="@id/action_group_leave" android:title="@string/groups_leave" app:showAsAction="never" />
    <item android:icon="@drawable/action_delete_white" android:id="@id/action_group_dissolve" android:title="@string/groups_dissolve" app:showAsAction="never" />
</menu>