<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/text_size_large" android:textStyle="bold" android:textColor="?android:textColorPrimary" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/link_warning_title" />
    <TextView android:textSize="@dimen/text_size_medium" android:textColor="?android:textColorPrimary" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_large" android:text="@string/link_warning_intro" />
    <TextView android:textSize="@dimen/text_size_medium" android:typeface="monospace" android:textColor="?android:textColorPrimary" android:id="@id/urlView" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_large" android:textIsSelectable="true" />
    <TextView android:textSize="@dimen/text_size_medium" android:textColor="?android:textColorPrimary" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_large" android:text="@string/link_warning_text" />
    <LinearLayout android:gravity="end" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_xxlarge">
        <Button android:id="@id/cancelButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cancel" style="@style/BriarButtonFlat.Positive" />
        <Button android:id="@id/openButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/link_warning_open_link" style="@style/BriarButtonFlat.Negative" />
    </LinearLayout>
</LinearLayout>