<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.constraint.ConstraintLayout android:id="@id/report_form" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <include android:id="@id/appBar" android:layout_width="0.0dip" android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" layout="@layout/toolbar" />
        <android.support.design.widget.TextInputLayout android:id="@id/user_comment_layout" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_large" android:layout_marginTop="@dimen/margin_large" android:layout_marginRight="@dimen/margin_large" app:hintEnabled="false" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/appBar">
            <android.support.design.widget.TextInputEditText android:id="@id/user_comment" android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxLines="5" android:inputType="textCapSentences|textMultiLine" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout android:id="@id/user_email_layout" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_large" android:layout_marginRight="@dimen/margin_large" app:hintEnabled="false" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/user_comment_layout">
            <android.support.design.widget.TextInputEditText android:id="@id/user_email" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/optional_contact_email" android:maxLines="1" android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>
        <CheckBox android:id="@id/include_debug_report" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_large" android:checked="false" android:text="@string/include_debug_report_crash" app:layout_constraintBottom_toBottomOf="@id/chevron" app:layout_constraintEnd_toStartOf="@id/chevron" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@id/chevron" />
        <Button android:id="@id/chevron" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/show" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@id/user_email_layout" style="@style/BriarButtonFlat.Positive" />
        <ScrollView android:id="@id/report_scroll" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/include_debug_report">
            <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/report_content" android:paddingTop="@dimen/margin_small" android:paddingBottom="@dimen/listitem_height_one_line_avatar" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        </ScrollView>
        <ProgressBar android:id="@id/progress_wheel" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:indeterminate="true" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/include_debug_report" style="?android:progressBarStyleLarge" />
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout android:id="@id/request_report" android:padding="@dimen/margin_large" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textSize="@dimen/text_size_large" android:textColor="?android:textColorSecondary" android:gravity="center" android:id="@id/crashed" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/briar_crashed" app:layout_constraintBottom_toTopOf="@id/fault" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_chainStyle="packed" />
        <TextView android:textSize="@dimen/text_size_large" android:textColor="?android:textColorSecondary" android:gravity="center" android:id="@id/fault" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_large" android:text="@string/not_your_fault" app:layout_constraintBottom_toTopOf="@id/pleaseSend" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/crashed" />
        <TextView android:textSize="@dimen/text_size_large" android:textColor="?android:textColorSecondary" android:gravity="center" android:id="@id/pleaseSend" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_large" android:text="@string/please_send_report" app:layout_constraintBottom_toTopOf="@id/encrypted" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/fault" />
        <TextView android:textSize="@dimen/text_size_large" android:textColor="?android:textColorSecondary" android:gravity="center" android:id="@id/encrypted" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_large" android:text="@string/report_is_encrypted" app:layout_constraintBottom_toTopOf="@id/acceptButton" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/pleaseSend" />
        <Button android:id="@id/declineButton" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/close" app:layout_constraintBottom_toBottomOf="@id/acceptButton" app:layout_constraintEnd_toStartOf="@id/acceptButton" app:layout_constraintHorizontal_weight="1.0" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@id/acceptButton" style="@style/BriarButtonFlat.Negative" />
        <Button android:id="@id/acceptButton" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_large" android:text="@string/send_report" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_weight="1.0" app:layout_constraintStart_toEndOf="@id/declineButton" app:layout_constraintTop_toBottomOf="@id/encrypted" style="@style/BriarButtonFlat.Positive" />
    </android.support.constraint.ConstraintLayout>
</FrameLayout>